# meeting-transcript

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  pixi.toml  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: transcript-agent.md
.github/commands/: add-speaker.md  meeting-notes.md  test.md
.github/skills/meeting-notes/: SKILL.md
.github/skills/new-command/: SKILL.md
.github/skills/quality-check/: SKILL.md
.github/workflows/: ci.yml
references/plans/: family_meeting_tech_spec.md
references/templates/: meeting-notes-zh-tw.md  meeting-notes.md
src/meeting_transcript/: __init__.py  main.py  models.py  transcript.py
src/meeting_transcript/alignment/: merger.py
src/meeting_transcript/analysis/: action_items.py  gemini_client.py  notes_generator.py
src/meeting_transcript/audio/: preprocessor.py  recorder.py
src/meeting_transcript/diarization/: speaker_id.py  voiceprint.py
src/meeting_transcript/transcription/: whisper_asr.py
tests/: test_alignment.py  test_analysis.py  test_models_extended.py  test_transcript.py
