[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meeting-transcript"
version = "0.1.0"
description = "Meeting transcript processor with speaker identification"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
meeting-transcript = "meeting_transcript.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/meeting_transcript"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
